tests/errors/lambda_type_error.ceos
_(a: Int): Int { a } ("foo")
